--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -11,18 +11,20 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/solid-js": "3.0.0",
+    "@astrojs/solid-js": "3.0.1",
     "@astrojs/tailwind": "5.0.0",
-    "@motionone/solid": "10.14.2",
-    "astro": "3.0.7",
-    "solid-js": "1.4.3",
-    "solid-markdown": "1.2.0",
-    "tailwindcss": "3.0.24",
-    "remark-gfm": "3.0.1",
-    "dayjs": "1.11.6",
+    "@motionone/solid": "10.16.4",
+    "astro": "3.2.0",
+    "solid-js": "1.7.12",
+    "solid-markdown": "1.2.2",
+    "tailwindcss": "3.3.3",
+    "remark-gfm": "4.0.0",
+    "dayjs": "1.11.10",
     "lodash": "4.17.21",
-    "clsx": "1.2.1",
-    "tailwind-merge": "1.10.0"
+    "clsx": "2.0.0",
+    "tailwind-merge": "1.10.0",
+    "@unpic/solid": "0.0.29",
+    "@unpic/astro": "0.0.25"
   },
   "devDependencies": {
     "@types/lodash": "4.14.191"
