--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -23,7 +23,8 @@
     "lodash": "4.17.21",
     "clsx": "2.0.0",
     "tailwind-merge": "1.10.0",
-    "@unpic/solid": "0.0.29"
+    "@unpic/solid": "0.0.29",
+    "@unpic/astro": "0.0.25"
   },
   "devDependencies": {
     "@types/lodash": "4.14.191"
