--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -11,20 +11,21 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/mdx": "^2.0.1",
     "@astrojs/solid-js": "3.0.1",
     "@astrojs/tailwind": "5.0.0",
     "@motionone/solid": "10.16.4",
+    "@unpic/astro": "0.0.25",
+    "@unpic/solid": "0.0.29",
     "astro": "3.2.0",
-    "solid-js": "1.7.12",
-    "solid-markdown": "1.2.2",
-    "tailwindcss": "3.3.3",
-    "remark-gfm": "4.0.0",
+    "clsx": "2.0.0",
     "dayjs": "1.11.10",
     "lodash": "4.17.21",
-    "clsx": "2.0.0",
+    "remark-gfm": "4.0.0",
+    "solid-js": "1.7.12",
+    "solid-markdown": "1.2.2",
     "tailwind-merge": "1.10.0",
-    "@unpic/solid": "0.0.29",
-    "@unpic/astro": "0.0.25"
+    "tailwindcss": "3.3.3"
   },
   "devDependencies": {
     "@types/lodash": "4.14.191"
